# rust_CICD_email_newsletter

./: Cargo.toml  Dockerfile
.github/workflows/: general.yaml
migrations/: 20240630152715_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  state.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
