[package]
name = "rusty_email_newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rusty_email_newsletter"

[dependencies]
tokio = {version = "1", features = ["full"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
axum = {version = "0.7.5", features = ["tokio"]}

[dev-dependencies]
reqwest = "0.11"
